<resources>
    <string name="app_name">Food Street</string>

    <string-array name="loginType">
        <item>Customer</item>
        <item>Vendor</item>
        <item>Admin</item>
    </string-array>

    <string-array name="availability">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="stateNames">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

    <string-array name="mapRadius">
        <item>3</item>
        <item>5</item>
        <item>7</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>


    <string-array name="paymentType">
        <item>Credit</item>
        <item>Debit</item>
    </string-array>

    <string-array name="CategoryType">
        <item>Burgers</item>
        <item>Shakes</item>
    </string-array>

    <string-array name="Month">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="Year">
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
    </string-array>

    <string-array name="Qnty">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="status">
        <item>Preparing</item>
        <item>Completed</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="favorites">favorites</string>
    <string name="search">search</string>
    <string name="map">map</string>
    <string name="account">account</string>
    <string name="cart">cart</string>
    <string name="title_activity_maps">Map</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="Cart">Cart</string>
    <string name="delivery">Delivery</string>
    <string name="pick_at_truck">Pick at Truck</string>
    <string name="delivery_home">Delivery Home</string>
    <string name="see_menu"><u>See Menu</u></string>
    <string name="order">order</string>
    <string name="menu">menu</string>
    <string name="prompt_month">EXP Month</string>
    <string name="prompt_nopayment"><b>No Payments Found</b>\n\nPlease Enter Payment Information \nBefore Placing Order</string>
    <string name="prompt_nomenu"><b>No Menu Found</b>\n\nPlease Enter Menu Items \nSo Customer Can Place Orders</string>
    <string name="prompt_notruck"><b>No Food Truck Found</b>\n\nPlease Add Your Food Trucks \nSo You Can Setup Your Menu</string>
    <string name="delete">Delete</string>
    <string name="no_food_trucks_saved">No Food Trucks Saved</string>
</resources>