<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/ic_menu"
        android:title="@string/menu" />
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/ic_place"
        android:title="@string/map" />
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:title="@string/account" />
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/ic_orders"
        android:title="@string/order" />
</menu>