<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/yourCartTv"
        style="@style/TextViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="25dp"
        android:text="@string/your_cart" />

    <ImageView
        android:id="@+id/z1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/yourCartTv"
        android:background="@drawable/horizontal_line" />

    <LinearLayout
        android:id="@+id/deliveryLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/z1"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_delivery" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/DeliveryText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/delivery" />

    </LinearLayout>

    <ImageView
        android:id="@+id/z2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/deliveryLL"
        android:background="@drawable/horizontal_line" />

    <RelativeLayout
        android:id="@+id/deliveryChoices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/z2"
        android:padding="10dp">

        <TextView
            android:id="@+id/t1"
            style="@style/DeliveryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delivery Options" />

        <HorizontalScrollView
            android:id="@+id/cartHorizontalSV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/t1"
            android:scrollbarAlwaysDrawHorizontalTrack="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="35dp"
                    app:cardBackgroundColor="@color/gray"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/pick_at_truck" />

                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="10dp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="35dp"
                    app:cardBackgroundColor="@color/gray"
                    app:cardCornerRadius="20dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/delivery_home" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </HorizontalScrollView>

    </RelativeLayout>

    <ImageView
        android:id="@+id/z3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/deliveryChoices"
        android:background="@drawable/horizontal_line" />

    <RelativeLayout
        android:id="@+id/r1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/z3">

        <TextView
            style="@style/DeliveryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Your Order" />

        <TextView
            android:id="@+id/seeMenu"
            style="@style/DeliveryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            android:text="@string/see_menu"
            android:textColor="@color/colorPrimaryDark" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/r1"
        android:padding="5dp"
        android:layout_above="@+id/btnPlaceOrder"/>



        <Button
            android:id="@+id/btnPlaceOrder"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:text="Place Order"
            />


</RelativeLayout>